--- a/service/.env
+++ b/service/.env
@@ -1,14 +1,14 @@
 # OpenAI API Key - https://platform.openai.com/overview
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 
 # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
 OPENAI_ACCESS_TOKEN=
 
 # OpenAI API Base URL - https://api.openai.com
-OPENAI_API_BASE_URL=
+OPENAI_API_BASE_URL=https://api.openai.com
 
 # Reverse Proxy
-API_REVERSE_PROXY=
+#API_REVERSE_PROXY=https://chat.duti.tech/api/conversation
 
 # timeout
 TIMEOUT_MS=100000
