--- a/service/package.json
+++ b/service/package.json
@@ -24,11 +24,13 @@
     "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "chatgpt": "^5.0.6",
     "dotenv": "^16.0.3",
     "esno": "^0.16.3",
     "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
+    "mysql": "^2.18.1",
     "node-fetch": "^3.3.0",
     "socks-proxy-agent": "^7.0.0"
   },
