fix: database env

--- a/service/.env
+++ b/service/.env
@@ -5,7 +5,7 @@ OPENAI_API_KEY=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
 OPENAI_ACCESS_TOKEN=
 
 # OpenAI API Base URL - https://api.openai.com
-OPENAI_API_BASE_URL=https://api.openai.com
+OPENAI_API_BASE_URL=https://service-7ttziymi-1254069183.hk.apigw.tencentcs.com/release/
 
 # Reverse Proxy
 #API_REVERSE_PROXY=https://chat.duti.tech/api/conversation
@@ -18,3 +18,10 @@ SOCKS_PROXY_HOST=
 
 # Socks Proxy Port
 SOCKS_PROXY_PORT=
+
+# mysql config
+MYSQL_HOST='sh-cynosdbmysql-grp-5b6kxbeg.sql.tencentcdb.com'
+MYSQL_PROT=22084
+MYSQL_USER=we_gpt_chat
+MYSQL_PASSWORD=9azsJGkDssz78aFh
+MJQL_DATABASE=chat
